# dragonsec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  codecov.yml  compare_modes.py  performance_test.py  pyproject.toml  setup.py
.github/workflows/: coverage.yml  dragonsec.yml
core/: scanner.py
dragonsec/: __init__.py  __main__.py  config.py
dragonsec/core/: __init__.py  scanner.py
dragonsec/providers/: __init__.py  base.py  deepseek.py  gemini.py  grok.py  local.py  openai.py
dragonsec/scan_results/: 20250210_000815_icbc_appointment_checker_openai_scan.json  20250210_001347_chitChat_semgrep_scan.json  20250210_131024_icbc_appointment_checker_openai_scan.json  20250211_234450_rqalpha_gemini_scan.json  20250212_001001_rqalpha_gemini_scan.json  20250212_001356_dragonsec_gemini_scan.json  20250212_002820_dragonsec_gemini_scan.json  20250212_003341_dragonsec_openai_scan.json
dragonsec/utils/: __init__.py  file_utils.py  rule_manager.py  secure.py  semgrep.py
tests/: conftest.py  test_local_mode.py  test_model_sizes.py  test_prompts.py  test_scanner.py
tests/fixtures/: sample_file.py  vulnerable_code.py
tests/fixtures/sample_project/: vulnerable.py
tests/performance/: compare_modes.py  performance_test.py  test_deepseek_performance.py
tests/providers/: test_base.py  test_base_enhanced.py  test_deepseek.py  test_gemini.py  test_grok.py  test_local_enhanced.py  test_openai.py  test_openai_enhanced.py
tests/utils/: test_file_utils.py  test_semgrep.py
tests/utils/fixtures/: test_imports.py
